--- a/sillamania.es/maquetas/_/css/styles.css
+++ b/sillamania.es/maquetas/_/css/styles.css
@@ -7806,4 +7806,13 @@ a.ui-button:active,
   -webkit-box-shadow: 0px 0px 5px #666666;
   box-shadow: 0px 0px 5px #666666; }
 
+.activados{
+  display:block;
+}
+
+.desactivados{
+  display:none;
+}
+
 /*# sourceMappingURL=styles.map */
+
